<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project Pintas</string>
    <string name="action_settings">Settings</string>
    <string name="splashscreen_logo">Image of Pintas Logo</string>
    <string name = "user_image">User Image</string>

    <!-- Strings related to login -->

    <string name="title_activity_login_activity2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_register"><b>Sign in</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="add_button">Add New</string>
    <string name="delete_button">Delete First</string>
    <string name="studentID_text">Student ID</string>
    <string name="firstname_text">Firstname</string>
    <string name="surname_text">Surname</string>
    <string name="student_id_value">ID Not Assigned</string>
    <string name="button_addStudent">Add Student</string>
    <string name="button_findStudent">Find Student</string>
    <string name="button_deleteStudent">Delete Student</string>
    <string name="login_text">Login</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="not_registered_text">Not Registered Yet?</string>
    <string name="button_login">Login</string>
    <string name="button_register_here">Register Here</string>
    <string name="button_setup_students">Setup Student Group</string>
    <string name="button_start_student_session">Start Student Session</string>
    <string name="button_view_student_results">View Student Results</string>
    <string name="register_text">Register Here</string>
    <string name="button_register">Register</string>
    <string name="undo_bar_text">Deleted</string>
    <string name="button_undo">Undo</string>
    <string name="text_delete_instructions">To delete a student select the delete button followed selecting the student from the list</string>
    <string name="password_edittext">Password</string>
    <string name="title_activity_pick_student">PickStudentActivity</string>
    <string name="title_activity_choose_letter">ChooseLetterActivity</string>
    <string name="title_drawing_canvas_activity">DrawingCanvasActivity</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="list_student_name">Name</string>
   <string name="title_activity_result">ResultActivity</string>
    <string name="results_week_1">Results</string>
    <string name="button_results_week_2">Results - Week 2</string>
    <string name="button_results_week_3">Results - Week 3</string>
    <string name="button_results_week_4">Results - Week 4</string>
    <string name="button_results_week_5">Results - Week 5</string>
    <string name="button_results_week_6">Results - Week 6</string>
    <string name="title_activity_results_wk1">ResultsWk1Activity</string>
    
    
    <!-- Strings for PickStudentActivity-->
    
    <string name="text_view">Pick a Student</string>
    
     <!-- Strings related to ChooseLetterActivity -->
     
     <string name="button_s"> s </string>
     <string name="button_a"> a </string>
     <string name="button_t"> t </string>
     <string name="button_i"> i </string>
     <string name="button_p"> p </string>
     <string name="button_n"> n </string>
     <string name="choose_letter">Choose a Letter</string>
     
 
    <string name="canvas_text">This is my canvas layout</string>
    <string name="button_clear">Clear</string>
    <string name="button_back">Back</string>
    <string name="button_forward">Forward</string>
    <string name="bin_button">Delete</string>
    <string name="go_button">Forward</string>
    <string name="back_button">Back</string>
    

</resources>
