<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pintas_no_name_full_colour"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.abcwrite.ChooseLetterActivity" >

    <RelativeLayout
        android:id="@+id/sat_layout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:gravity="center_horizontal"
    	android:padding="24dp"
        android:layout_above="@+id/button_p"
        android:layout_marginBottom="218dp">

    </RelativeLayout>
        
     <RelativeLayout
        android:id="@+id/ipn_layout"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:padding="24dp"
        >

     </RelativeLayout>
      
     <ImageButton
            android:id="@+id/imageBtnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="goBack"
            android:padding="8dp"
            android:src="@drawable/home"
            android:contentDescription="@string/back_button"/>

    <Button
        android:id="@+id/button_p"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_p"
        android:padding="16dp"
        android:onClick="startSessionP"
        android:textColor="@color/White"
        android:background="@drawable/buttonshape"
        android:textSize="50sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="158dp"
        android:layout_above="@+id/textView"
        android:layout_alignLeft="@+id/imageBtnBack"
        android:layout_alignStart="@+id/imageBtnBack"
        android:layout_marginLeft="90dp"
        android:layout_marginStart="90dp" />

    <Button
       android:id="@+id/button_n"
       style="?android:attr/buttonStyleSmall"
       android:layout_width="100dp"
       android:layout_height="wrap_content"
       android:text="@string/button_n"
       android:padding="16dp"
        android:onClick="startSessionN"
       android:textColor="@color/White"
       android:background="@drawable/buttonshape"
       android:textSize="50sp"
        android:layout_alignTop="@+id/button_i"
        android:layout_toRightOf="@+id/button_i"
        android:layout_toEndOf="@+id/button_i" />

    <Button
      android:id="@+id/button_i"
      style="?android:attr/buttonStyleSmall"
      android:layout_width="100dp"
      android:layout_height="wrap_content"
      android:text="@string/button_i"
      android:padding="16dp"
        android:onClick="startSessionI"
      android:textColor="@color/White"
        android:background="@drawable/buttonshape"
      android:textSize="50sp"
        android:layout_alignTop="@+id/button_p"
        android:layout_toRightOf="@+id/button_p"
        android:layout_toEndOf="@+id/button_p" />

    <Button
        android:id="@+id/button_t"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/button_t"
        android:padding="16dp"
        android:onClick="startSessionT"
        android:textColor="@color/White"
        android:background="@drawable/buttonshape"
        android:textSize="50sp"
        android:layout_alignTop="@+id/button_n"
        android:layout_toRightOf="@+id/button_n"
        android:layout_toEndOf="@+id/button_n" />

    <Button
        android:id="@+id/button_a"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/button_a"
        android:padding="16dp"
        android:onClick="startSessionA"
        android:textColor="@color/White"
        android:background="@drawable/buttonshape"
        android:textSize="50sp"
        android:layout_alignTop="@+id/button_t"
        android:layout_toRightOf="@+id/button_t"
        android:layout_toEndOf="@+id/button_t" />

    <Button
        android:id="@+id/button_s"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/button_s"
        android:padding="16dp"
        android:onClick="startSessionS"
        android:textColor="@color/White"
        android:background="@drawable/buttonshape"
        android:textSize="50sp"
        android:layout_alignTop="@+id/button_a"
        android:layout_toRightOf="@+id/button_a"
        android:layout_toEndOf="@+id/button_a" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Please choose a letter and let&apos;s get drawing!"
        android:id="@+id/textView"
        android:textSize="60sp"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginBottom="124dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
